# OpenVisionABU26

./: .gitignore  Dockerfile  README.md
Obsidian_Vault/01_Technical_Report/: 2026-04-30_OpenVisionABU26-Version3.md
Obsidian_Vault/02_Feature_Log/: 2026-04-24_02_TeamColorFilter.md  2026-04-24_03_DecisionEngine.md  2026-04-24_04_KFSInstancePrototype.md  2026-04-24_05_OpenVisionV3_KFSInstanceRuntime.md  2026-04-24_Migrate_V2_Refactor_To_New_Workspace.md  2026-04-24_TeamColorFilter.md  2026-04-25_04_KFSInstancePrototype.md  2026-04-26_05_OpenVisionV3_KFSInstanceRuntime.md  2026-04-27_06_OpenVisionV3_KFS3DLocalizer.md  2026-04-27_07_OpenVisionV3_KFSLocalizationStabilizer.md  2026-04-28_08_OpenVisionV3_RuntimeSafetyHardening.md  2026-04-29_09_OpenVisionV3_ONNXRuntimeBaselineBenchmark.md  2026-04-29_10_OpenVisionV3_TensorRTBackendArchitecture.md
Obsidian_Vault/04_Future_Work/: 2026-04-29_00_OpenVisionV3_GeneralFutureWork.md  2026-04-29_03_GStreamerNVMMZeroCopyOptimization.md
docs/: 1_architecture_overview.md  2_system_requirements.md  3_ros2_demo_quickstart.md  4_docker_setup.md  5_docker_commands_reference.md  6_docker_gpu_setup.md  7_troubleshooting.md  8_detection_output_usage.md
src/abu_yolo_ros/: CMakeLists.txt  package.xml
src/abu_yolo_ros/config/: yolo_detection.yaml
src/abu_yolo_ros/include/abu_yolo_ros/: block_localizer.hpp  circuit_breaker.hpp  decision_engine.hpp  detection_types.hpp  inference_backend.hpp  kfs_instance_aggregator.hpp  onnx_runtime_backend.hpp  team_color_filter.hpp  temporal_tracker.hpp  tensorrt_backend.hpp  yolo_detector.hpp  yolo_inference_utils.hpp
src/abu_yolo_ros/launch/: yolo.launch.py
src/abu_yolo_ros/models/: fptu_abu26_detect.names
src/abu_yolo_ros/msg/: KfsInstance.msg  KfsInstanceArray.msg  LocalizedKfsInstance.msg  LocalizedKfsInstanceArray.msg
src/abu_yolo_ros/src/: decision_engine.cpp  image_bgr_debug_node.cpp  image_passthrough_node.cpp  kfs_3d_localizer_node.cpp  kfs_instance_aggregator.cpp  kfs_localization_stabilizer_node.cpp  onnx_runtime_backend.cpp  team_color_filter.cpp  tensorrt_backend.cpp  yolo_detection_node.cpp  yolo_detector.cpp  yolo_inference_utils.cpp
src/abu_yolo_ros/test/: decision_engine_test.cpp
src/abu_yolo_ros/tools/: README.md  calibrate_camera.py  hsv_calibration_viewer.py  kfs_instance_prototype.py  tune_decision_thresholds.py
src/abu_yolo_ros/tools/config/: camera_calibration_example.yaml  kfs_instance_prototype.yaml
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v0/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v10/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v11/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v12_pass/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v13/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v16_pass/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v4/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v7/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v8/: kfs_instance_summary.json
src/abu_yolo_ros/tools/data_test/run_images/kfs_instance_debug_v9/: kfs_instance_summary.json
vault/01_Technical_Report/: 2026-04-30_01_OpenVisionABU26-Version3.md  2026-04-30_02_YoloDetectionConfigGuide.md  2026-04-30_03_R2MeihuaForestStrategyFlow.md  2026-04-30_OpenVisionABU26-Version3.md
vault/02_Feature_Log/: 2026-04-24_01_MigrateV2RefactorToNewWorkspace.md  2026-04-24_03_DecisionEngine.md  2026-04-25_04_KFSInstancePrototype.md  2026-04-26_05_OpenVisionV3_KFSInstanceRuntime.md
vault/03_Manager_Memory/: 2026-04-30_EndingPrompt.md
vault/04_Future_Work/: 2026-04-29_01_LogWarning.md  2026-04-29_02_TensorRTJetsonNanoEnvironmentEngineBuildBenchmark.md  2026-04-29_04_KFSTargetPriority_ClosestSelection_VisualServoing.md  2026-04-29_05_OpenVisionV3_GeneralFutureWork.md  2026-04-29_06_DownstreamStateHandlingContract.md
vault/06_Team_Member/: 2026-04-30_TeamMember.md
